--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jakub">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" href="icon.png">
     <link rel="Stylesheet" href="style.css">
     <title>MuscleGym</title>
 </head>
@@ -28,3 +28,4 @@
 
 </body>
 </html>
+    
