--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Jakub">
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="Stylesheet" href="style.css">
+    <meta name="google-site-verification" content="oZGo7FBWY95nmTmT5rfRR5aOPs4b0tCTqZUGoIp3sXs" />
     <title>MuscleGym</title>
 </head>
 <body>
